share-db/share-iiidevops/devopsapi-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 , Ref - devops-system/_environments.json
kind: Deployment
metadata:
  name: devopsapi
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsapi
  template:
    metadata:
      labels:
        app: devopsapi
    spec:
      containers:
      - name: devopsapi
        image: iiiorg/devops-api:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 10009
        volumeMounts:
        - name: kube-config
          mountPath: /root/.kube
        - name: iii-logs
          mountPath: /usr/src/app/logs
      volumes:
      - name: kube-config
        persistentVolumeClaim:
          claimName: kube-config		  
      - name: iii-logs
        persistentVolumeClaim:
          claimName: iii-logs
