share-db/share-iiidevops/devopsui-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: devopsui
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsui
  template:
    metadata:
      labels:
        app: devopsui
    spec:
      containers:
      - name: devopsui
        image: iiiorg/devops-ui:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 80
