share-db/share-iiidevops/devopsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsapi-service
  namespace: devops
  labels: 
    app: devopsapi
spec:
  type: NodePort
  selector:
    app: devopsapi
  ports:
    - name: devopsapi-port
      protocol: TCP
      port: 10009
      nodePort: 31850
