share-db/share-iiidevops/devopsui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsui-service
  labels: 
    app: devopsui
spec:
  type: ClusterIP
  selector:
    app: devopsui
  ports:
    - name: webport
      protocol: TCP
      port: 80
