share-db/share-iiidevops/rancher-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-nodeport-svc
  namespace: devops
spec:
  type: NodePort
  selector:
    app: rancher 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30004
